# HTSegregation_PyironWorkflow_Demonstrator

./: .gitignore  README.md  environment.yml  grain_boundary_segregation.ipynb  pyproject.toml
.binder/: environment.yml
FeGB_PtableSeg/: bulk_df.csv  chargemol.py  plotters.py
